--- a/QuickBuy.Web/ClientApp/src/index.html
+++ b/QuickBuy.Web/ClientApp/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>  
+  <app-root>Carregando...</app-root>  
 </body>
 </html>
